--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "aos": "^2.3.4",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
